--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
             <div class="envelope"></div>
             <div class="letter">
                 <h1>Hi my love❤️</h1>
+                <p>I'm always proud of you, forever greatful for having you in my like, 
+                    i've found my missing piece, iloveyouu</p>
             </div>
         </div>
         <div class="buttons">
